[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["DerRochie <john@rochester.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"